--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,8 +8,8 @@ name: Deploy to GitHub Pages
 
 on:
   push:
-    branches: [main]
-      workflow_dispatch:
+    branches: [mainn   
+      workflow_dispatch::
 
 
 permissions:
