--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,10 +8,9 @@ name: Deploy to GitHub Pages
 
 on:
   push:
-      branches:
+    branches:
       - main
-    workflow_dispath::
-
+  workflow_dispatch:
 
 permissions:
   contents: read
@@ -24,21 +23,24 @@ jobs:
     steps:
       - name: Checkout source
         uses: actions/checkout@v3
+
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '18'
           cache: 'npm'
+
       - name: Install dependencies
-        run: |
-          npm install --legacy-peer-deps
+        run: npm install --legacy-peer-deps
+
       - name: Build
-        run: |
-          npm run build
+        run: npm run build
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
-          path: dist
+          path: 'dist'
+
   deploy:
     needs: build
     runs-on: ubuntu-latest
